--- a/module-admin/src/main/resources/templates/resources/view.html
+++ b/module-admin/src/main/resources/templates/resources/view.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorate="~{layout/main}">
 
-<div layout:fragment="content" class="page-body">
+<div layout:fragment="content">
     <div class="row">
         <div class="col-12">
             <div class="card">
