--- a/module-admin/src/main/resources/templates/roles/view.html
+++ b/module-admin/src/main/resources/templates/roles/view.html
@@ -24,20 +24,7 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-block-small">
-                        <div class="row m-b-30">
-                            <div class="col-lg-12">
-                                <div class="tab-content card-block" id="tabContentArea">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="tab-content" id="tabContentArea"></div>
     </div>
 
     <script>
