--- a/module-admin/src/main/resources/templates/faq/view.html
+++ b/module-admin/src/main/resources/templates/faq/view.html
@@ -72,7 +72,7 @@
                             <h5><strong>FAQ 검색결과</strong></h5>
                         </div>
                         <div class="col-12 col-md-6 text-right">
-                            <button type="button" class="btn btn btn-transparent m-r-5" id="deleteBtn">삭제</button>
+                            <button type="button" class="btn btn btn-delete m-r-5" id="deleteBtn">삭제</button>
                             <button type="button" class="btn btn-transparent" id="insertBtn">등록</button>
                         </div>
                     </div>
